# rfocxt

./: .gitignore  Cargo.toml  README.md
call_chain/: Cargo.toml
call_chain/src/: lib.rs
call_chain/src/analysis/: callback.rs  exporter.rs  hirvisitor.rs
context/file_context.rs/ConstItem/new/: context.rs
context/file_context.rs/EnumItem/SEUGetApplications/get_impls/: context.rs
context/file_context.rs/ForeignModItem/new/: context.rs
context/file_context.rs/FunctionItem/get_applications/: context.rs
context/file_context.rs/ImplItem/new/: context.rs
context/file_context.rs/ImplItem/to_item_impl/: context.rs
context/file_context.rs/MacroItem/new/: context.rs
context/file_context.rs/ModItem/new/: context.rs
context/file_context.rs/PathVisitor/Visit/visit_path/: context.rs
context/file_context.rs/StaticItem/new/: context.rs
context/file_context.rs/StructItem/new/: context.rs
context/file_context.rs/SynFile/from_syntax/: context.rs
context/file_context.rs/SynFile/new_with_file_path/: context.rs
context/file_context.rs/SynFile/to_string/: context.rs
context/file_context.rs/SynFiles/add_syn_file/: context.rs
context/file_context.rs/SynFiles/get_all_context/: context.rs
context/file_context.rs/SynFiles/get_context_item/: context.rs
context/file_context.rs/SynFiles/new/: context.rs
context/file_context.rs/TraitAliasItem/new/: context.rs
context/file_context.rs/TraitItem/new/: context.rs
context/file_context.rs/TraitItem/to_item_trait/: context.rs
context/file_context.rs/TypeItem/new/: context.rs
context/file_context.rs/UnionItem/new/: context.rs
context/file_context.rs/UseItem/new/: context.rs
context/file_context.rs/visit_stmts/: context.rs
context/main.rs/main/: context.rs
context/utils.rs/find_rs_files/: context.rs
src/: main.rs  utils.rs
src/collect_context/: crate_context.rs  file_context.rs  items_context.rs  mod.rs  mod_context.rs  result.rs  syntax_context.rs
test/: test.rs
