[package]
name = "rfocxt"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0.74", features = [ "parsing", "full", "visit", "extra-traits", "visit-mut" ] }
quote = "1.0.36"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
serde = { version="1.0.207", features = ["derive"] }
serde_json = "1.0.124"
clap = { version="4.5.16", features=["derive"] }
