[package]
name = "rfocxt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["call_chain"]

[dependencies]
call_chain = { path = "call_chain" }
clap = { version = "4.5.21", features = ["derive"] }
prettyplease = "0.2.25"
proc-macro2 = { version = "1.0.89", features = ["span-locations"] }
quote = "1.0.37"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = { version = "2.0.87", features = [
  "extra-traits",
  "full",
  "parsing",
  "visit",
  "visit-mut",
] }
toml = "0.8.19"
