[package]
name = "call_chain"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-call-chain"

[[bin]]
name = "call-chain"

[dependencies]
cargo_metadata = "0.18"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
syn = { version = "2.0.87", features = ["extra-traits", "full", "parsing", "visit", "visit-mut"] }
